👌 IMPROVE: Configured running arguments of application with maven
resolved #47